[gd_scene load_steps=7 format=2]

[ext_resource path="res://Font/tangerine.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Score.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.219608, 0.239216, 0.533333, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.533333, 0.219608, 0.219608, 1 )

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
script = ExtResource( 2 )

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -43.0
margin_top = 68.0
margin_right = 43.0
margin_bottom = 114.0
custom_colors/font_color = Color( 0.0588235, 0.101961, 0.537255, 1 )
custom_fonts/font = SubResource( 1 )
text = "Score"

[node name="GameOverContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -46.0
margin_right = 120.0
margin_bottom = 46.0

[node name="GameOver" type="Label" parent="GameOverContainer"]
margin_right = 240.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0.537255, 0.0588235, 0.0588235, 1 )
custom_fonts/font = SubResource( 2 )
text = "Game Over"

[node name="ButtonPlayAgain" type="Button" parent="GameOverContainer"]
margin_top = 72.0
margin_right = 240.0
margin_bottom = 112.0
rect_min_size = Vector2( 100, 40 )
custom_styles/normal = SubResource( 3 )
text = "Play Again"

[node name="ButtonMenu" type="Button" parent="GameOverContainer"]
margin_top = 116.0
margin_right = 240.0
margin_bottom = 156.0
rect_min_size = Vector2( 100, 40 )
custom_styles/normal = SubResource( 4 )
text = "Menu"

[connection signal="pressed" from="GameOverContainer/ButtonPlayAgain" to="." method="_on_ButtonPlayAgain_pressed"]
[connection signal="pressed" from="GameOverContainer/ButtonMenu" to="." method="_on_ButtonMenu_pressed"]
